update listings complete, front to backend

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -139,6 +139,35 @@
           <!-- <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle4" role="button">Delete Modal</a> -->
         <!-- Delete Product Modal Flow Ends -->
 
+        <!-- update complete modal start -->
+        <div class="modal fade" id="updateModal" aria-hidden="true" aria-labelledby="exampleModalToggleLabel5" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered modal-xl">
+              <div class="modal-content">
+                  <div class="modal__background">
+                <div class="modal-header">
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="modal-body">
+                        <div class="modal-heading">
+                            <p class="modal-subtitle">Product Update Successfully</p>
+                        </div>
+                        <div class="delete">
+                            <div class="delete__btns">
+                                <button class="delete-btn-alt" id="updateOkay">Okay</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                  <div class="form__footer"></div>
+                </div>
+              </div>
+              </div>
+            </div>
+        </div>
+        <!-- update complete modal end -->
+
         <!-- start of profile -->
         <div class="artist-profile" id="userProfileSection">
             <div class="artist-profile__top">
