--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -49,10 +49,10 @@
             </div>
             <div class="secondary-nav__navigation">
                 <div class="secondary-nav__top"> <!-- Remember display none on this -->
-                    <div class="secondary-nav__btn secondary-nav__go-back" id="goBackProfileBtn">
+                    <!-- <div class="secondary-nav__btn secondary-nav__go-back" id="goBackProfileBtn">
                         <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
                         <button class="secondary-nav-back">Go Back</button>
-                    </div>
+                    </div> -->
                     <div class="secondary-nav__btn">
                         <button class="secondary-nav-back">Post a Listing</button>
                         <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="secondary-nav__bottom">
                     <ul class="secondary-nav__ul">
-                        <div class="secondary-nav__back">
+                        <div class="secondary-nav__back secondary-nav__back-arrow" id="goBackProfileBtn">
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
                             <button class="secondary-nav-back">Go Back</button>
                         </div>
