working on product-shop page, cards appending properly minus store name

--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -9,9 +9,9 @@
     </head>
 
     <body>
-        <div class="shop-container" id="shopContainer">
+        <!-- <div class="shop-container" id="shopContainer">
 
-        </div>
+        </div> -->
 
         <div>
             <div id="productContainer"></div>
