shop and product page mostly appending and functioning, seller info and comments need more work

--- a/frontend/shop-products.html
+++ b/frontend/shop-products.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="secondary-nav__bottom">
                     <ul class="secondary-nav__ul">
-                        <div class="secondary-nav__back">
+                        <div class="secondary-nav__back" id="productBackBtn">
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
                             <button class="secondary-nav-back">Go Back</button>
                         </div>
@@ -57,38 +57,36 @@
        
         <!-- end of nav -->
 
-        <section class="products">
+        <section class="products" id="productSection">
             <div class="products-title">
                 <h1 class="title">SHOP COLLECTION</h1>
             </div>
 
-            <div class="products-container" id="shopContainer">
-                
-            </div>
+            <div class="products-container" id="shopContainer"></div>
         </section>
 
-        <section class="product-detail">
+        <section class="product-detail" id="productDetails">
 
             <div class="product-detail__upper">
-                <div class="product-images">
-                    <div class="images-left">
+                <div class="product-images" id="productImages">
+                    <!-- <div class="images-left">
                         <img class="product-img-one" src="/frontend/img/Group 47.png">
                         <img class="product-img-two" src="/frontend/img/Group 91.png">
                         <img class="product-img-three" src="/frontend/img/Group 92.png">
                     </div>
                     <div class="images-right">
                         <img class="main-image" src="/frontend/img/Group 47.png">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="product-description">
-                    <div class="product description__upper">
-                        <h6 class="type">TYPE</h6>
+                    <div class="product description__upper" id="productInfo">
+                        <!-- <h6 class="type">TYPE</h6>
                         <h3 class="product-name">Product Name</h3>
                         <h6 class="artist-name">Artist Name</h6>
                         <h6 class="price">$34</h6>
 
                         <p class="info"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sit veniam dolorem voluptatem saepe iste voluptatibus nobis quibusdam qui blanditiis, reiciendis deserunt, hic quod voluptate veritatis voluptates dicta dolore tempora necessitatibus vero molestias? Id, doloribus magni. Quaerat cum odit at nam, illo sit eius eos provident aliquam numquam, nemo eum.
-                        </p>
+                        </p> -->
                     </div>
                     <div class="product-btns">
                         <select class="quantity">
@@ -135,15 +133,15 @@
 
             <div class="product-detail__lower">
                 <div class="product-artist">
-                    <div class="artist__upper">
-                        <img class="artist-img" src="/frontend/img/artist.png">
+                    <div class="artist__upper" id="artistUpper">
+                        <!-- <img class="artist-img" src="/frontend/img/artist.png">
                         <div class="artist-detail">
                             <h3 class="artist-name">ARTIST NAME</h3>
                             <button class="view-profile">VIEW SELLER PROFILE <i class="fa-solid fa-arrow-right-long"></i></button>
-                        </div>
+                        </div> -->
                     </div>
-                    <div class="artist-bio">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ipsa corrupti delectus cumque. Minus laborum eligendi eius, assumenda at id facilis ex itaque accusantium sequi aliquid voluptates culpa nam rerum tenetur deleniti quidem neque voluptate placeat. Dolores earum nisi facilis.</p>
+                    <div class="artist-bio" id="artistBio">
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ipsa corrupti delectus cumque. Minus laborum eligendi eius, assumenda at id facilis ex itaque accusantium sequi aliquid voluptates culpa nam rerum tenetur deleniti quidem neque voluptate placeat. Dolores earum nisi facilis.</p> -->
                     </div>
                     <div class="artist-socials">
                         <span class="fa-stack fa-2x">
