Home page responsive but no background

--- a/frontend/upload-product.html
+++ b/frontend/upload-product.html
@@ -22,37 +22,38 @@
     <body>
         <div class="add-product__background"></div>
         <!-- Nav Begins -->
-        <div class="nav">
-            <div class="nav__logo">
-                <img src="./img/earthenwares-langing-logo.png" alt="" class="nav-logo">
+        <div class="secondary-nav">
+            <div class="secondary-nav__logo">
+                <img src="./img/green-logo.png" alt="" class="secondary-nav-logo">
             </div>
-            <div class="nav__navigation">
-                <div class="nav__top">  <!-- Remember display none on this --> 
-                    <div class="nav__btn">
+            <div class="secondary-nav__navigation">
+                <div class="secondary-nav__top">
+                    <div class="secondary-nav__btn">
                         <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
-                        <button class="nav-back">Go Back</button>
+                        <button class="secondary-nav-back">Go Back</button>
                     </div>
-                    <div class="nav__btn">
-                        <button class="nav-back">Post a Listing</button>
+                    <div class="secondary-nav__btn">
+                        <button class="secondary-nav-back">Post a Listing</button>
                         <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
                     </div>
                 </div>
-                <div class="nav__bottom">
-                    <ul class="nav__ul">
-                        <div class="nav__back">
+                <div class="secondary-nav__bottom">
+                    <ul class="secondary-nav__ul">
+                        <div class="secondary-nav__back">
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
-                            <button class="nav-back">Go Back</button>
+                            <button class="secondary-nav-back">Go Back</button>
                         </div>
-                        <li class="nav-li">Home</li>
-                        <li class="nav-li">Collection</li>
-                        <li class="nav-li">About Us</li>
+                        <a href="index.html"><li class="secondary-nav-li">Home</li></a>
+                        <li class="secondary-nav-li">Collection</li>
+                        <li class="secondary-nav-li">About Us</li>
                     </ul>
-                    <div class="nav__btn">
-                        <button class="nav-btn">User Profile</button>
-                        <i class="fa-solid fa-bag-shopping nav-fa-landing"></i>
+                    <div class="secondary-nav__btn">
+                        <button class="secondary-nav-btn">User Profile</button>
+                        <i class="fa-solid fa-bag-shopping secondary-nav-fa-landing"></i>
                     </div>
                 </div>
             </div>
+            
         </div>
         <!-- Nav Ends -->
         <!-- Dummy comment -->
