--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,105 +77,147 @@
             </div>
         </section>
 
+        <!-- Content Begins -->
+
         <section class="landing__body">
             <div class="landing__background">
                 <div class="landing__background-box">
-                    <img src="./img/landing-background-left-merged.png" alt="" class="landing__background-img">
+                    <!-- <img src="./img/landing-background-left-merged.png" alt="" class="landing__background-img"> -->
+                    
                 </div>
                 <div class="landing__background-box">
-                    <img src="./img/landing-background-right-merged.png" alt="" class="landing__background-img">
+                    <!-- <img src="./img/landing-background-right-merged.png" alt="" class="landing__background-img"> -->
                 </div>
                 <!-- <img src="./img/landing-background-left-img-ext.png" alt="" class="landing__background-img">
                 <img src="./img/landing-background-right-img-ext.png" alt="" class="landing__background-img"> -->
             </div>
             <div class="landing__content">
-                <div class="landing__content-images">
-                    <div class="landing__content-image">
-                        <img src="./img/landing-img-1.png" alt=""   class="landing__content-img">
+                <div class="landing__content-container"> 
+                    <div class="landing__content-images">
+                        <div class="landing__content-image">
+                            <img src="./img/landing-img-1.png" alt=""   class="landing__content-img">
+                        </div>
+                        <div class="landing__content-image">
+                            <img src="./img/landing-img-2.png" alt=""  class="landing__content-img">
+                        </div>
                     </div>
-                    <div class="landing__content-image">
-                        <img src="./img/landing-img-2.png" alt=""  class="landing__content-img">
+                    <div class="landing__content-text">
+                        <div class="landing__content-textbox">
+                            <h3 class="landing__content-heading">1.</h3>
+                            <p class="landing__content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis et nisi nec iaculis. Aliquam ullamcorper dolor ac nibh ultricies, sit amet pretium eros tempus. Fusce gravida in purus vitae placerat.</p>
+                        </div>
+                        <div class="landing__content-textbox">
+                            <h3 class="landing__content-heading">2.</h3>
+                            <p class="landing__content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis et nisi nec iaculis. Aliquam ullamcorper dolor ac nibh ultricies, sit amet pretium eros tempus. Fusce gravida in purus vitae placerat.</p>
+                        </div>
+                        <div class="landing__content-textbox">
+                            <h3 class="landing__content-heading">3.</h3>
+                            <p class="landing__content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis et nisi nec iaculis. Aliquam ullamcorper dolor ac nibh ultricies, sit amet pretium eros tempus. Fusce gravida in purus vitae placerat.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="landing__content-text">
-                    <div class="landing__content-textbox">
-                        <h3 class="landing__content-heading">1.</h3>
-                        <p class="landing__content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis et nisi nec iaculis. Aliquam ullamcorper dolor ac nibh ultricies, sit amet pretium eros tempus. Fusce gravida in purus vitae placerat.</p>
+                <div class="landing__products">
+                    <div class="landing__products-cards">
+                        <div class="cards">
+                            <div class="cards__img">
+                                <img src="./img/landing-img-1.png" alt="" class="cards-img">
+                            </div>
+                            <div class="cards__body">
+                                <div class="cards__body-top">
+                                    <p class="cards__body-name">Product Name</p>
+                                    <p class="cards__body-price">$34</p>
+                                </div>
+                                <div class="cards__body-bottom">
+                                    <p class="cards__body-artist">Jane Doe</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards__img">
+                                <img src="./img/landing-img-1.png" alt="" class="cards-img">
+                            </div>
+                            <div class="cards__body">
+                                <div class="cards__body-top">
+                                    <p class="cards__body-name">Product Name</p>
+                                    <p class="cards__body-price">$34</p>
+                                </div>
+                                <div class="cards__body-bottom">
+                                    <p class="cards__body-artist">Jane Doe</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards__img">
+                                <img src="./img/landing-img-1.png" alt="" class="cards-img">
+                            </div>
+                            <div class="cards__body">
+                                <div class="cards__body-top">
+                                    <p class="cards__body-name">Product Name</p>
+                                    <p class="cards__body-price">$34</p>
+                                </div>
+                                <div class="cards__body-bottom">
+                                    <p class="cards__body-artist">Jane Doe</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards__img">
+                                <img src="./img/landing-img-1.png" alt="" class="cards-img">
+                            </div>
+                            <div class="cards__body">
+                                <div class="cards__body-top">
+                                    <p class="cards__body-name">Product Name</p>
+                                    <p class="cards__body-price">$34</p>
+                                </div>
+                                <div class="cards__body-bottom">
+                                    <p class="cards__body-artist">Jane Doe</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards__img">
+                                <img src="./img/landing-img-1.png" alt="" class="cards-img">
+                            </div>
+                            <div class="cards__body">
+                                <div class="cards__body-top">
+                                    <p class="cards__body-name">Product Name</p>
+                                    <p class="cards__body-price">$34</p>
+                                </div>
+                                <div class="cards__body-bottom">
+                                    <p class="cards__body-artist">Jane Doe</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="cards__img">
+                                <img src="./img/landing-img-1.png" alt="" class="cards-img">
+                            </div>
+                            <div class="cards__body">
+                                <div class="cards__body-top">
+                                    <p class="cards__body-name">Product Name</p>
+                                    <p class="cards__body-price">$34</p>
+                                </div>
+                                <div class="cards__body-bottom">
+                                    <p class="cards__body-artist">Jane Doe</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards">
+                            <div class="cards__img">
+                                <img src="./img/landing-img-1.png" alt="" class="cards-img">
+                            </div>
+                            <div class="cards__body">
+                                <div class="cards__body-top">
+                                    <p class="cards__body-name">Product Name</p>
+                                    <p class="cards__body-price">$34</p>
+                                </div>
+                                <div class="cards__body-bottom">
+                                    <p class="cards__body-artist">Jane Doe</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="landing__content-textbox">
-                        <h3 class="landing__content-heading">2.</h3>
-                        <p class="landing__content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis et nisi nec iaculis. Aliquam ullamcorper dolor ac nibh ultricies, sit amet pretium eros tempus. Fusce gravida in purus vitae placerat.</p>
-                    </div>
-                    <div class="landing__content-textbox">
-                        <h3 class="landing__content-heading">3.</h3>
-                        <p class="landing__content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis et nisi nec iaculis. Aliquam ullamcorper dolor ac nibh ultricies, sit amet pretium eros tempus. Fusce gravida in purus vitae placerat.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="landing__products">
-                <div class="landing__products-cards">
-                    <div class="card" style="width: 30rem;">
-                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
-                        <div class="card-body">
-                          <div class="card-body-top">
-                              <p class="card-name">Item Name</p>
-                              <p class="card-price">$34</p>
-                          </div>
-                          <div class="card-body-bottom">
-                              <p class="card-artist">Jane Doe</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="card" style="width: 30rem;">
-                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
-                        <div class="card-body">
-                          <div class="card-body-top">
-                              <p class="card-name">Item Name</p>
-                              <p class="card-price">$34</p>
-                          </div>
-                          <div class="card-body-bottom">
-                              <p class="card-artist">Jane Doe</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="card" style="width: 30rem;">
-                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
-                        <div class="card-body">
-                          <div class="card-body-top">
-                              <p class="card-name">Item Name</p>
-                              <p class="card-price">$34</p>
-                          </div>
-                          <div class="card-body-bottom">
-                              <p class="card-artist">Jane Doe</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="card" style="width: 30rem;">
-                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
-                        <div class="card-body">
-                          <div class="card-body-top">
-                              <p class="card-name">Item Name</p>
-                              <p class="card-price">$34</p>
-                          </div>
-                          <div class="card-body-bottom">
-                              <p class="card-artist">Jane Doe</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="card" style="width: 30rem;">
-                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
-                        <div class="card-body">
-                          <div class="card-body-top">
-                              <p class="card-name">Item Name</p>
-                              <p class="card-price">$34</p>
-                          </div>
-                          <div class="card-body-bottom">
-                              <p class="card-artist">Jane Doe</p>
-                          </div>
-                        </div>
-                      </div>
-                      
-                </div>
                 <div class="landing__products-more">
                     <div class="landing__products-cont">
                         <button class="landing__products-btn">See all products</button>
@@ -183,6 +225,7 @@
                     </div>
                 </div>
             </div>
+    </div>
         </section>
 
         <!-- Login/Signup Modal Flow Begins-->
@@ -317,7 +360,7 @@
                                         <div class="form__input form__input-alt">
                                             <label for="imageURL">Image URL *</label>
                                             <div class="form__image-preview-box">
-                                                <input name="imageURL" class="login-input form-text-input" type="text"      placeholder="email...">
+                                                <input name="imageURL" class="login-input form-text-input" type="text"      placeholder="image url">
                                                 <button class="signup__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
                                             </div>
                                         </div>
