--- a/frontend/upload-product.html
+++ b/frontend/upload-product.html
@@ -43,7 +43,7 @@
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
                             <button class="nav-back">Go Back</button>
                         </div>
-                        <li class="nav-li">Home</li>
+                        <a href="index.html"><li class="nav-li">Home</li></a>
                         <li class="nav-li">Collection</li>
                         <li class="nav-li">About Us</li>
                     </ul>
@@ -152,7 +152,9 @@
                                 <option value="brown">Blue</option>
                                 <option value="brown">Brown</option>
                                 <option value="white">White</option>
-                                <option value="white">Yellow</option>
+                                <option value="yellow">Yellow</option>
+                                <option value="green">Green</option>
+                                <option value="grey">Grey</option>
                             </select>
                             </div>
                         </div>
