have created modal, updated cards, fixed modal back btn

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -280,7 +280,7 @@
                 <div class="modal__background">
                 <div class="modal-header">
                     <div class="modal-header__back">
-                        <button class="btn btn-primary modal-back-btn" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"><i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>Go back</button>
+                        <button class="modal-back-btn" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"><i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>Go back</button>
                     </div>
                         <button type="button" class="btn-close modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -340,7 +340,7 @@
                   <div class="modal__background">
                     <div class="modal-header">
                         <div class="modal-header__back">
-                            <button class="btn btn-primary modal-back-btn" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal"><i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>Go back</button>
+                            <button class="modal-back-btn" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal"><i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>Go back</button>
                         </div>
                             <button type="button" class="btn-close modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
