--- a/frontend/shop-products.html
+++ b/frontend/shop-products.html
@@ -165,7 +165,8 @@
                             <!-- <i class="fa-solid fa-circle-small"></i>  -->
                             <h4 class="comment-no">(5 comments)</h4>
                         </div>
-                        <button class="add-comment-btn">ADD COMMENT OR QUESTION</button>
+                        <button class="add-comment-btn" data-bs-toggle="modal" href="#exampleModalToggle7" role="button">ADD COMMENT OR QUESTION</button>
+                        
                     </div>
                     <div class="comments-display">
                         <div class="comment-container">
@@ -215,6 +216,44 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Modal for comments starts -->
+
+            <div class="modal fade" id="exampleModalToggle7" aria-hidden="true" aria-labelledby="exampleModalToggleLabel7" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered modal-xl">
+                  <div class="modal-content">
+                      <div class="modal__background">
+                        <div class="modal-header">
+                                <button type="button" class="btn-close modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                    <div class="modal-body">
+                        <div class="modal-heading">
+                            <h3 class="modal-title">Add comment or question</h3>
+                            <h4 class="modal-subtitle">Leave a question or comment for the seller below. Please remember to be respectul to the Earthenwares community at all times!</h4>
+                        </div>
+                        <div class="form"> 
+                            <div class="signup__store">      
+                                <div class="form__input">
+                                    <label for="comments">Comment/question</label>
+                                    <textarea name="comments" class="login-input form-text-input" type="text" placeholder="Have something to say?"></textarea>
+                                </div>
+                                <div class="form__btns">
+                                    <button class="login-btn form-btn">Post Comment</button>
+                                    <button class="cancel-button form-btn-alt">Cancel</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <div class="form__footer"></div>
+                    </div>
+                  </div>
+                </div>
+                </div>
+              </div>
+              <!-- <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle7" role="button">Add Modal</a> -->
+
+            <!-- Modal for comments ends -->
 
         </section>
 
