--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,10 +31,6 @@
                 <div class="nav__navigation">
                     <div class="nav__top"> <!-- Remember display none on this -->
                         <div class="nav__btn">
-                            <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
-                            <button class="nav-back">Go Back</button>
-                        </div>
-                        <div class="nav__btn">
                             <button class="nav-back">Post a Listing</button>
                             <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
                         </div>
@@ -117,7 +113,7 @@
                     </div>
                 </div>
                 <div class="landing__products">
-                    <div class="landing__products-cards">
+                    <div id="landingProductsCards" class="landing__products-cards">
                         <div class="cards">
                             <div class="cards__img">
                                 <img src="./img/landing-img-1.png" alt="" class="cards-img">
@@ -292,15 +288,15 @@
                         <div class="signup">      
                             <div class="form__input">
                                 <label for="email">Email *</label>
-                                <input name="email" class="signup-input form-text-input" type="text"      placeholder="email...">
+                                <input id="signUpEmail" name="email" class="signup-input form-text-input" type="text"      placeholder="email...">
                             </div>  
                             <div class="form__input">
                                 <label for="username">Username *</label>
-                                <input name="username" class="signup-input form-text-input" type="text" placeholder="username...">
+                                <input id="signUpUsername" name="username" class="signup-input form-text-input" type="text" placeholder="username...">
                             </div>
                             <div class="form__input">
                                 <label for="password">Password *</label>
-                                <input name="password" class="signup-input form-text-input" type="text"      placeholder="password...">
+                                <input id="signUpPassword" name="password" class="signup-input form-text-input" type="text"      placeholder="password...">
                             </div>
                             <div class="form__radio-all">
                             <p for="">Will you be selling your work?</p>
@@ -310,8 +306,8 @@
                                     <label class="form__radio-header" for="yes">yes</label>
                                 </div>                    
                                 <div class="form__radio">
-                                    <input class="form-radio" type="radio" name="signUpSeller"      value="yes">
-                                    <label class="form__radio-header" for="yes">no</label>
+                                    <input class="form-radio" type="radio" name="signUpSeller" value="no">
+                                    <label class="form__radio-header" for="no">no</label>
                                 </div>
                             </div>
                             </div>
@@ -353,14 +349,14 @@
                             <div class="signup__store-box">
                                 <div class="form__input-box">
                                     <div class="form__input form__input-alt">
-                                        <label for="username">Store Name *</label>
-                                        <input name="username" class="signup-input form-text-input" type="text" placeholder="Enter store name here">
+                                        <label for="storeName">Store Name *</label>
+                                        <input name="storeName" id="signUpStoreName" class="signup-input form-text-input" type="text" placeholder="Enter store name here">
                                     </div>
                                     <div class="form__image-preview-box">
                                         <div class="form__input form__input-alt">
                                             <label for="imageURL">Image URL *</label>
                                             <div class="form__image-preview-box">
-                                                <input name="imageURL" class="login-input form-text-input" type="text"      placeholder="image url">
+                                                <input name="imageURL" id="signUpProfilePicture" class="login-input form-text-input" type="text"      placeholder="image url">
                                                 <button class="signup__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
                                             </div>
                                         </div>
@@ -371,22 +367,22 @@
                          
                             <div class="form__input">
                                 <label for="description">Store Description *</label>
-                                <textarea name="description" class="login-input form-text-input" type="text" placeholder="store description"></textarea>
+                                <textarea name="description" id="signUpStoreDescription" class="login-input form-text-input" type="text" placeholder="store description"></textarea>
                             </div>
                             <div class="form__input">
-                                <label for="username">Instagram</label>
-                                <input name="username" class="login-input form-text-input signup-description" type="text" placeholder="username...">
+                                <label for="instagram">Instagram</label>
+                                <input name="instagram" id="signUpInstagram" class="login-input form-text-input signup-description" type="text" placeholder="@wellingtonPottersAssociation">
                             </div>
                             <div class="form__input">
-                                <label for="username">Facebook</label>
-                                <input name="username" class="login-input form-text-input" type="text" placeholder="username...">
+                                <label for="facebook">Facebook</label>
+                                <input name="facebook" id="signUpFacebook" class="login-input form-text-input" type="text" placeholder="facebook.com/wellingtonPotters">
                             </div>
                             <div class="form__input">
-                                <label for="username">Twitter</label>
-                                <input name="username" class="login-input form-text-input" type="text" placeholder="username...">
+                                <label for="twitter">Twitter</label>
+                                <input name="twitter" id="signUpTwitter" class="login-input form-text-input" type="text" placeholder="@wellingtonPottersAssociation">
                             </div>
                             <div class="form__btns">
-                                <button class="login-btn form-btn">Create Account</button>
+                                <button class="login-btn form-btn" id="signUpBtn">Create Account</button>
                             </div>
                         </div>
                     </div>
@@ -440,14 +436,14 @@
           <!-- Product Added Modal Ends -->
         
         <!-- Testing backend functionality start -->
-        <div style="padding-left: 10rem; padding-top: 10rem;" id="profileDivNav">
+        <!-- <div style="padding-left: 10rem; padding-top: 10rem;" id="profileDivNav">
             <h1>Account profile</h1>
 
             <a href="./profile.html" id="myProfileBtn">My profile</a>
 
-        </div>
+        </div> -->
 
-        <div style="padding-left: 10rem; padding-top: 10rem;">
+        <!-- <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Sign up</h1>
 
             <input type="text" placeholder="username..." id="signUpUsername">
@@ -478,7 +474,7 @@
 
             <input type="text" placeholder="twitter..." id="signUpTwitter">
 
-            <button id="signUpBtn">Sign up</button>
+        --> <button id="signUpBtn">Sign up</button>
         </div>
 
         <div style="padding-left: 10rem; padding-top: 10rem;">
@@ -496,7 +492,7 @@
 
             <button id="signOutBtn">Sign out</button>
 
-        </div>
+        </div> -->
 
         <!-- <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Add product</h1>
@@ -538,6 +534,36 @@
 
             <button id="addProductBtn">Add product</button>
         </div> -->
+
+
+
+
+
+
+        <!-- <div class="signup__store-box">
+            <div class="form__input-box">
+                <div class="form__input form__input-alt">
+                    <label for="storeName">Store Name *</label>
+                    <input name="storeName" id="signUpStoreName" class="signup-input form-text-input" type="text" placeholder="Enter store name here">
+                </div>
+                <div class="form__image-preview-box">
+                    <div class="form__input form__input-alt">
+                        <label for="imageURL">Image URL *</label>
+                        <div class="form__image-preview-box">
+                            <input name="imageURL" id="signUpProfilePicture" class="login-input form-text-input" type="text"      placeholder="image url">
+                            <button class="signup__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form__image-preview"></div>
+        </div> -->
+
+
+
+
+
+
 
         <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Delete product</h1>
