All image previews are functioning
All image previews are functioning, drag to scroll is function but crashes js when not on home-page so is currently commented out.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -375,7 +375,7 @@
                                             <label for="imageURL">Image URL *</label>
                                             <div class="form__image-preview-box">
                                                 <input name="imageURL" id="signUpProfilePicture" class="login-input form-text-input" type="text"      placeholder="image url">
-                                                <button class="signup__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
+                                                <button class="signup__image-preview" id="imgPreviewBtnModal" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
                                             </div>
                                         </div>
                                     </div>
