--- a/frontend/upload-product.html
+++ b/frontend/upload-product.html
@@ -65,6 +65,7 @@
                 <div class="upload__images">
                     <div class="upload__image-header">
                         <h4 class="upload-heading">Upload Images</h4>
+                        <p class="upload-subheading-alt">For premium quality please ensure these images are square!</p>
                         <p class="upload-subheading">High quality imagery can make or break a sale, you have three opportunities to blow potential customers away! Try to capture images in high quality, with natural lighting and show multiple angles!</p>
                     </div>
                     <div class="upload__image">
@@ -72,31 +73,31 @@
                             <div class="form__input upload__image-input">
                                 <label for="imageURL1">Image URL *</label>
                                 <div class="form__image-preview-box">
-                                    <input name="imageURL1" class="login-input form-text-input" type="text"      placeholder="Image..." id="addProductImgOneUrl">
-                                    <button class="upload__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
+                                    <input name="imageURL1" class="login-input form-text-input" type="text" placeholder="Image..." id="addProductImgOneUrl">
+                                    <button class="upload__image-preview" id="imgPreviewBtnUploadOne" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
                                 </div>
                             </div>
-                            <div class="upload__image-box"></div>
+                            <div class="upload__image-box" id="uploadImageBoxOne"></div>
                         </div>
                         <div class="upload__image-input-box">
                             <div class="form__input upload__image-input">
                                 <label for="imageURL2">Image URL *</label>
                                 <div class="form__image-preview-box">
                                     <input name="imageURL2" class="login-input form-text-input" type="text"      placeholder="Image..." id="addProductImgTwoUrl">
-                                    <button class="upload__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
+                                    <button class="upload__image-preview" id="imgPreviewBtnUploadTwo" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
                                 </div>
                             </div>
-                            <div class="upload__image-box"></div>
+                            <div class="upload__image-box" id="uploadImageBoxTwo"></div>
                         </div>
                         <div class="upload__image-input-box">
                             <div class="form__input upload__image-input">
                                 <label for="imageURL3">Image URL *</label>
                                 <div class="form__image-preview-box">
                                     <input name="imageURL3" class="login-input form-text-input" type="text"      placeholder="Image..." id="addProductImgThreeUrl">
-                                    <button class="upload__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
+                                    <button class="upload__image-preview" id="imgPreviewBtnUploadThree" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
                                 </div>
                             </div>
-                            <div class="upload__image-box"></div>
+                            <div class="upload__image-box" id="uploadImageBoxThree"></div>
                         </div>
                     </div>
                 </div>
